[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tech-support-agent"
version = "0.1.0"
description = "OpenEnv AI Tech Support Orchestrator environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai"
]
