[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tech-support-agent"
version = "0.1.0"
description = "OpenEnv AI Tech Support Orchestrator environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
